[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/TankAssets/towerDefense_tile249.png" type="Texture" id=1]
[ext_resource path="res://Elements/NPC_Turret.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 348.897

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.5, 41.5 )

[node name="NPC_Turret" type="KinematicBody2D" groups=["minimap_objects"]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
script = ExtResource( 2 )

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="TurretBody" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="SpawnPoint" type="Position2D" parent="TurretBody"]
position = Vector2( 0, -97 )

[node name="ShotTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
